Fix fieldset vertical align

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4,7 +4,12 @@ body {font-family: sans-serif}
 #SystemMessage { position: fixed; top: 5px; background-color: DarkSlateBlue; color: #ffffff; left: 5px; display:none; }
 .dragandrophandler { border:2px dotted #0B85A1; color:#92AAB0;vertical-align:middle;padding:10px 10px 10 10px;margin-bottom:10px;font-size:200%;}
 .unsaved-input { border: 2px solid pink; border-radius: 7px; }
-fieldset {display:inline-block;margin-bottom:10px;margin-right:10px}
+fieldset {
+  display:inline-block;
+  margin-bottom:10px;
+  margin-right:10px;
+  vertical-align: top;
+}
 .ui-state-active {border: 1px solid #c5c5c5;background: #f6f6f6;color:black}
 .gpiolabel {font-size:20px}
 #outputMsg {float:left}
@@ -17,6 +22,9 @@ fieldset {display:inline-block;margin-bottom:10px;margin-right:10px}
   border-radius: 0 0 5px 5px;
   padding: 10px;
   box-sizing: border-box;
+}
+.content.open {
+  display: block;
 }
 #MainMenu > h3 {
   border: 1px #aaa solid;
